contact and script js

--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
                         vendus grâce au site, des vues, etc...<br><br><strong>Garantie de résultat ou remboursé !&nbsp;</strong>Si pendant un mois, il y a eu une faible audience, ou aucun produit vendu: le prix sera de&nbsp;<strong>0€ !</strong><br><br><strong>Sans engagement</strong>:
                         un simple appel ou mail pour résilier le service.</p>
                 </div>
-                <div class="modal-footer"><button class="btn btn-primary" type="button">Votre maquette gratuite en 24h !</button><button class="btn btn-light" type="button" data-dismiss="modal">Fermer</button></div>
+                <div class="modal-footer"><a href="#contact" class="btn btn-primary" type="button">Votre maquette gratuite en 24h !</a><button class="btn btn-light" type="button" data-dismiss="modal">Fermer</button></div>
             </div>
         </div>
     </div>
@@ -234,7 +234,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.min.js?h=3dc75c4166e4986e5409754caf677c60') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.min.js') }}"></script>
 </body>
 
 </html>
