Maquette gratuit go to contact

--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
                         vendus grâce au site, des vues, etc...<br><br><strong>Garantie de résultat ou remboursé !&nbsp;</strong>Si pendant un mois, il y a eu une faible audience, ou aucun produit vendu: le prix sera de&nbsp;<strong>0€ !</strong><br><br><strong>Sans engagement</strong>:
                         un simple appel ou mail pour résilier le service.</p>
                 </div>
-                <div class="modal-footer"><a href="#contact" class="btn btn-primary" type="button">Votre maquette gratuite en 24h !</a><button class="btn btn-light" type="button" data-dismiss="modal">Fermer</button></div>
+                <div class="modal-footer"><a href="?reload=1#contact" class="btn btn-primary" type="button">Votre maquette gratuite en 24h !</a><button class="btn btn-light" type="button" data-dismiss="modal">Fermer</button></div>
             </div>
         </div>
     </div>
