--- a/templates/index.html
+++ b/templates/index.html
@@ -222,6 +222,7 @@
                 <div class="col-md-6">
                     <h4 class="text-uppercase mb-4">À Propos de polinfo</h4>
                     <p class="lead mb-0"><span>Polinfo est une société de conseils et de développement informatique</span></p>
+                    <p class="lead mb-0">xuan.polinfo@gmail.com</p>
                 </div>
             </div>
         </div>
